# Slicer3-shallow

./: CMakeLists.txt  TestingMacros.h  launch.tcl.in  slicer_variables.tcl
Applications/CLI/: BSplineDeformableRegistration.cxx  CMakeLists.txt  ModelMaker.cxx
Applications/CLI/SparseFieldLevelSetContour/: SparseFieldLevelSetContour.cxx
Applications/CLI/Testing/: CMakeLists.txt
Applications/GUI/: Slicer3.cxx
Base/GUI/: vtkSlicerApplication.cxx  vtkSlicerApplication.h  vtkSlicerApplicationGUI.cxx  vtkSlicerApplicationGUI.h  vtkSlicerCacheAndDataIOManagerGUI.cxx  vtkSlicerFiducialListWidget.cxx  vtkSlicerModulesConfigurationStep.cxx  vtkSlicerSeedWidgetClass.cxx  vtkSlicerSliceControllerWidget.cxx  vtkSlicerSlicesControlGUI.cxx  vtkSlicerToolbarGUI.cxx  vtkSlicerToolbarGUI.h  vtkSlicerToolbarIcons.cxx  vtkSlicerToolbarIcons.h  vtkSlicerViewControlGUI.cxx  vtkSlicerViewerWidget.cxx  vtkSlicerViewerWidget.h
Base/GUI/Resources/: vtkSlicerViewToolbar_ImageData.h
Base/GUI/Tcl/: LoadVolume.tcl  SWidget.tcl  SlicePlaneSWidget.tcl  SliceSWidget.tcl  SliceViewerInteractor.tcl
Base/Logic/: vtkImageStash.cxx  vtkImageStash.h  vtkSlicerColorLogic.cxx  vtkSlicerColorLogic.h  vtkSlicerSliceLayerLogic.cxx  vtkSlicerSliceLogic.cxx  vtkSlicerSliceLogic.h
Base/Logic/Testing/: ImageStashTest.cxx
CMake/: ExternalProject.cmake  NSIS.template.in
Extensions/: CMTK4Slicer.s3ext  EMFiberClusteringModule.s3ext
Libs/MRML/: vtkCacheManager.cxx  vtkCacheManager.h  vtkMRMLColorTableStorageNode.cxx  vtkMRMLFiducialListStorageNode.cxx  vtkMRMLLayoutNode.h  vtkMRMLScene.cxx  vtkMRMLScene.h  vtkMRMLSliceNode.cxx  vtkMRMLSliceNode.h  vtkMRMLStorageNode.cxx  vtkMRMLVolumeArchetypeStorageNode.cxx  vtkURIHandler.h
Libs/RemoteIO/: vtkHTTPHandler.cxx  vtkHTTPHandler.h  vtkXNDHandler.cxx  vtkXNDHandler.h
Libs/vtkITK/: itkGrowCutSegmentationImageFilter.h  itkGrowCutSegmentationImageFilter.txx  vtkITKArchetypeImageSeriesReader.cxx  vtkITKGrowCutSegmentationImageFilter.cxx  vtkITKGrowCutSegmentationImageFilter.h
Libs/vtkTeem/: vtkDiffusionTensorGlyph.cxx
Modules/: CMakeLists.txt
Modules/CropVolume/: CropVolumeGUI.tcl
Modules/EMSegment/: CMakeLists.txt  vtkEMSegmentGUI.cxx  vtkEMSegmentGUI.h  vtkEMSegmentLogic.cxx  vtkEMSegmentLogic.h  vtkEMSegmentMRMLManager.cxx  vtkEMSegmentMRMLManager.h
Modules/EMSegment/Algorithm/: vtkImageEMLocalSegmenter.cxx  (+4 more)
Modules/EMSegment/CMTK-Extension/: CMakeLists.txt
Modules/Editor/: ColorBox.tcl  DrawEffect.tcl  EditBox.tcl  EditorGUI.tcl  EditorLogic.tcl  EffectSWidget.tcl  GrowCutSegmentEffect.tcl  HelperBox.tcl  Labeler.tcl  PaintEffect.tcl
Modules/Endoscopy/: EndoscopyGUI.py
Modules/FetchMI/: vtkFetchMIFlatResourceWidget.cxx  vtkFetchMIGUI.cxx  vtkFetchMIResourceUploadWidget.cxx
Modules/IGTRecorder/: IGTRecorderGUI.py
Modules/Measurements/: vtkMeasurementsRulerWidget.cxx
Modules/NeuroNav/: vtkNeuroNavGUI.cxx
Modules/OpenIGTLinkIF/: vtkIGTLToMRMLImage.cxx  vtkIGTLToMRMLImage.h  vtkMRMLIGTLConnectorNode.cxx  vtkMRMLIGTLConnectorNode.h  vtkOpenIGTLinkIFGUI.cxx  vtkOpenIGTLinkIFGUI.h  vtkOpenIGTLinkIFLogic.cxx
Modules/Pharmacokinetics/: CMakeLists.txt  vtkMRMLPharmacokineticsCurveAnalysisNode.cxx  vtkMRMLPharmacokineticsCurveAnalysisNode.h  vtkPharmacokineticsGUI.cxx  vtkPharmacokineticsGUI.h  vtkPharmacokineticsLogic.cxx  vtkPharmacokineticsLogic.h
Modules/Pharmacokinetics/PkSolver/: CMakeLists.txt  PkSolver.h
Modules/ProstateNav/: CMakeLists.txt  vtkMRMLProstateNavManagerNode.cxx  vtkProstateNavGUI.cxx
Modules/ScriptedModule/: vtkScriptedModuleGUI.cxx
Modules/SlicerWelcome/: vtkSlicerWelcomeGUI.cxx
Modules/VolumeRendering/: CMakeLists.txt  presets.xml  vtkSlicerVolumeRenderingHelper.cxx  vtkVolumeRenderingGUI.cxx  vtkVolumeRenderingGUI.h  vtkVolumeRenderingLogic.cxx
Modules/Volumes/: vtkSlicerDiffusionWeightedVolumeDisplayWidget.cxx
Scripts/: extend.tcl  genlib.tcl  getbuildtest.tcl
SuperBuild/: CMakeLists.txt
(+58 files in other folders)
